--- a/style.css
+++ b/style.css
@@ -78,21 +78,12 @@ input#timeCounter {
     width: 300px;
 }
 
-
-@media (min-width: 576px) {}
-
-@media (min-width: 768px) {}
-
-@media (min-width: 992px) {}
-
-@media (min-width: 1200px) {}
+/* Machine Menu/Images */
 
 .image-button {
     transition: transform 0.1s ease;
-    margin: auto;
-    width: 300px;
-    margin: 10px;
-    padding: 10px;
+    width: 100%;
+
 }
 
 .image-button img {
@@ -106,7 +97,7 @@ input#timeCounter {
     color: white;
     background-color: black;
     font-size: 18px;
-
+    justify-content: center;
 }
 
 .image-button:hover {
@@ -117,7 +108,52 @@ input#timeCounter {
     transform: translateY(50px);
 }
 
+/*
+@media (max-width: 576px) {
+    .machine_menu {
+        background-color: red;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 0px;
+    }
 
+    .image-button {
+        width: 150px;
+    }
+
+    .image-button span {
+        color: white;
+        background-color: black;
+        font-size: 10px;
+    }
+}
+
+/* NAVBAR CSS */
+/*
+@media (max-width: 768px) {
+    .machine_menu {
+        background-color: green;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 0px;
+    }
+
+    .image-button {
+        background-color: red;
+        width: 100px;
+    }
+    
+    .image-button span {
+        color: white;
+        background-color: black;
+        font-size: 10px;
+    }
+}
+*/
+
+/* CASH CSS */
 .monnaie img{
     height: auto;
     max-width: none;
@@ -137,6 +173,7 @@ input#timeCounter {
     }
 }
 
+/* NAVBAR CSS */
 nav {
     justify-content: center;
     font-size:30px;
@@ -171,9 +208,6 @@ nav a {
         padding-left:0px;
     }
 }
-
-
-
 
 
 input[type=number]::-webkit-inner-spin-button,
